--- a/package.json
+++ b/package.json
@@ -1,47 +1,39 @@
 {
   "name": "@hexlet/code",
-  "version": "0.0.1",
-  "description": "",
-  "engines": {
-    "node": "16.x"
-  },
-  "type": "module",
-  "main": "src/init.js",
+  "version": "1.0.0",
+  "description": "[![Actions Status](https://github.com/SevHope/frontend-project-11/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/SevHope/frontend-project-11/actions)",
+  "main": "index.js",
   "scripts": {
-    "test": "npx jest",
-    "build": "NODE_ENV=production webpack --mode production"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Vladimir Afanasiev",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SevHope/frontend-project-11.git"
+  },
+  "author": "SevHope",
   "license": "ISC",
-  "dependencies": {
-    "@popperjs/core": "^2.11.6",
-    "axios": "^0.27.2",
-    "bootstrap": "^5.2.0",
-    "core-js": "^3.25.0",
-    "i18next": "^21.9.1",
-    "lodash": "^4.17.21",
-    "on-change": "^4.0.1",
-    "regenerator-runtime": "^0.13.9",
-    "yup": "^0.32.11"
+  "bugs": {
+    "url": "https://github.com/SevHope/frontend-project-11/issues"
   },
+  "homepage": "https://github.com/SevHope/frontend-project-11#readme",
   "devDependencies": {
-    "autoprefixer": "^10.4.8",
-    "css-loader": "^6.7.1",
-    "eslint": "^8.23.0",
+    "eslint": "^8.51.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "html-webpack-plugin": "^5.5.0",
-    "jest": "^29.0.1",
-    "mini-css-extract-plugin": "^2.6.1",
-    "node-sass": "^7.0.1",
-    "postcss": "^8.4.16",
-    "postcss-loader": "^7.0.1",
-    "postcss-preset-env": "^7.8.0",
-    "sass-loader": "^13.0.2",
-    "style-loader": "^3.3.1",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.10.0"
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jest": "^27.4.2",
+    "html-webpack-plugin": "^5.5.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "babel-loader": "^9.1.3",
+    "bootstrap": "^5.3.2",
+    "css-loader": "^6.8.1",
+    "mini-css-extract-plugin": "^2.7.6",
+    "postcss-loader": "^7.3.3",
+    "sass": "^1.69.3",
+    "sass-loader": "^13.3.2",
+    "workbox-webpack-plugin": "^7.0.0"
   }
 }
